--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/js/all.min.js" integrity="sha256-MAgcygDRahs+F/Nk5Vz387whB4kSK9NXlDN3w58LLq0=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/js/all.min.js"
+        integrity="sha256-MAgcygDRahs+F/Nk5Vz387whB4kSK9NXlDN3w58LLq0=" crossorigin="anonymous"></script>
     <title>My Landing page</title>
 </head>
+
 <body>
     <nav>
         <div class="logo">
@@ -23,7 +26,7 @@
     </nav>
 
     <header>
-        <button id="button" class="button">
+        <button id="button" class="button toggle">
             <i class="fa fa-bars fa-2x"></i>
         </button>
 
@@ -32,63 +35,72 @@
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem, eveniet.</p>
 
         <button class="cta-btn" id="open">Sign Up</button>
-
-        <div class="container">
-            <h2>What's the landing page about</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid labore quibusdam, qui tenetur distinctio alias inventore! Alias nisi nostrum amet, aut maxime iste provident culpa sapiente pariatur sequi iusto ducimus.</p>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam illum tenetur reprehenderit molestias cupiditate nihil error esse culpa et beatae!</p>
-            
-            <h2>Tell Me More</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id nihil ipsam sapiente veniam debitis. Dignissimos, perspiciatis animi maxime ducimus assumenda explicabo consectetur enim ex molestias quas sapiente commodi vitae dolores minus beatae, obcaecati odit placeat incidunt autem minima cumque. Eaque.</p>
-            
-            <h2>Benefits</h2>
-            <ul>
-                <li>Lifetime Access</li>
-                <li>30 Days Money Back</li>
-                <li>Tailored Customer Support</li>
-            </ul>
-
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis beatae minima quisquam, dignissimos voluptate perspiciatis ex quod asperiores molestiae, quasi, aliquam rem accusamus eum minus totam corporis nihil voluptatibus repellat iste tempore! Voluptatum distinctio eum beatae expedita voluptas aut ullam consequatur labore vel quisquam, temporibus dignissimos perspiciatis accusantium nam alias sapiente earum et quia natus sit odio! Atque qui quisquam inventore tenetur, corrupti vero earum blanditiis pariatur asperiores fugit. Aspernatur?</p>
-
-        </div>
-
-        <!--modal-->
-        <div class="modal-container" id="modal">
-            <div class="modal">
-                <button class="close-btn" id="close">
-                    <i class="fa fa-times"></i>
-                </button>
-                <div class="modal-header">
-                    <h3>Sign Up</h3>
-                </div>
-                <div class="modal-content">
-                    <p>Register with us to get content and more</p>
-                    <form class="modal-from">
-                        <div>
-                            <label for="name">Name</label>
-                        <input type="text" placeholder="Enter name">
-                        </div>
-                        <div>
-                            <label for="email">Email</label>
-                        <input type="email" placeholder="Enter email">
-                        </div>
-                        <div>
-                            <label for="password">Password</label>
-                        <input type="password" placeholder="Enter password" id = "password">
-                        </div>
-                        <div>
-                            <label for="password2">Confirm Password</label>
-                        <input type="password" placeholder="Confirm password">
-                        </div>
-                        <input type="submit" value = "Submit" class = "submit-btn">
-                    </form>
-                </div>
-
-            </div>
-        </div>
     </header>
+    <div class="container">
+        <h2>What's the landing page about</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid labore quibusdam, qui tenetur
+            distinctio alias inventore! Alias nisi nostrum amet, aut maxime iste provident culpa sapiente pariatur
+            sequi iusto ducimus.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam illum tenetur reprehenderit molestias
+            cupiditate nihil error esse culpa et beatae!</p>
 
+        <h2>Tell Me More</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id nihil ipsam sapiente veniam debitis.
+            Dignissimos, perspiciatis animi maxime ducimus assumenda explicabo consectetur enim ex molestias quas
+            sapiente commodi vitae dolores minus beatae, obcaecati odit placeat incidunt autem minima cumque. Eaque.
+        </p>
 
+        <h2>Benefits</h2>
+        <ul>
+            <li>Lifetime Access</li>
+            <li>30 Days Money Back</li>
+            <li>Tailored Customer Support</li>
+        </ul>
+
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis beatae minima quisquam, dignissimos
+            voluptate perspiciatis ex quod asperiores molestiae, quasi, aliquam rem accusamus eum minus totam
+            corporis nihil voluptatibus repellat iste tempore! Voluptatum distinctio eum beatae expedita voluptas
+            aut ullam consequatur labore vel quisquam, temporibus dignissimos perspiciatis accusantium nam alias
+            sapiente earum et quia natus sit odio! Atque qui quisquam inventore tenetur, corrupti vero earum
+            blanditiis pariatur asperiores fugit. Aspernatur?</p>
+
+    </div>
+
+    <!--modal-->
+    <div class="modal-container" id="modal">
+        <div class="modal">
+            <button class="close-btn" id="close">
+                <i class="fa fa-times"></i>
+            </button>
+            <div class="modal-header">
+                <h3>Sign Up</h3>
+            </div>
+            <div class="modal-content">
+                <p>Register with us to get content and more</p>
+                <form class="modal-from">
+                    <div>
+                        <label for="name">Name</label>
+                        <input type="text" placeholder="Enter name">
+                    </div>
+                    <div>
+                        <label for="email">Email</label>
+                        <input type="email" placeholder="Enter email">
+                    </div>
+                    <div>
+                        <label for="password">Password</label>
+                        <input type="password" placeholder="Enter password" id="password">
+                    </div>
+                    <div>
+                        <label for="password2">Confirm Password</label>
+                        <input type="password" placeholder="Confirm password">
+                    </div>
+                    <input type="submit" value="Submit" class="submit-btn">
+                </form>
+            </div>
+
+        </div>
+    </div>
     <script src="script.js"></script>
-</body> 
+</body>
+
 </html>
