--- a/index.html
+++ b/index.html
@@ -80,19 +80,19 @@
                 <form class="modal-from">
                     <div>
                         <label for="name">Name</label>
-                        <input type="text" placeholder="Enter name">
+                        <input type="text" placeholder="Enter name" class="form-input">
                     </div>
                     <div>
                         <label for="email">Email</label>
-                        <input type="email" placeholder="Enter email">
+                        <input type="email" placeholder="Enter email" class="form-input">
                     </div>
                     <div>
                         <label for="password">Password</label>
-                        <input type="password" placeholder="Enter password" id="password">
+                        <input type="password" placeholder="Enter password" id="password" class="form-input">
                     </div>
                     <div>
                         <label for="password2">Confirm Password</label>
-                        <input type="password" placeholder="Confirm password">
+                        <input type="password" placeholder="Confirm password" class="form-input">
                     </div>
                     <input type="submit" value="Submit" class="submit-btn">
                 </form>
