Added toggle menu feature

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </nav>
 
     <header>
-        <button id="button" class="button toggle">
+        <button id="toggle" class="button toggle">
             <i class="fa fa-bars fa-2x"></i>
         </button>
 
